--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -3,7 +3,7 @@
     <div class="row position-absolute logofaq">
 <!--        <div class="col-12">-->
 <!--            <div class="row">-->
-                <h1 class="h5 font-weight-bold ">FREQUENTLY ASKED QUESTIONS</h1>
+                <h1 class="h5 font-weight-bold ">{{translation.FAKQ}}</h1>
 <!--            </div>-->
 <!--        </div>-->
 
@@ -18,14 +18,14 @@
         <div class="col-md">
             <div class="row text-center mt-4">
                 <div class="col-12">
-                    <a class="general" href="faq/1">
+                    <a class="general" href="faq">
                         <img class="ativo" src="./images/General.svg">
                     </a>
 
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold ativo" >GENERAL</h6></div>
+                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold ativo" >{{translation.GENERAL}}</h6></div>
             </div>
         </div>
         <div class="col-md">
@@ -33,7 +33,7 @@
                 <div class="col-12"><img class="" src="./images/Usage.svg"></div>
             </div>
             <div class="row">
-                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >USAGE</h6></div>
+                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.USAGE}}</h6></div>
             </div>
         </div>
         <div class="col-md">
@@ -41,7 +41,7 @@
                 <div class="col-12"><img class="" src="./images/Booking%20and%20Payment.svg"></div>
             </div>
             <div class="row">
-                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >BOOKING AND PAYMENT</h6></div>
+                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.B_PAYMENT}}</h6></div>
             </div>
         </div>
         <div class="col-md">
@@ -49,7 +49,7 @@
                 <div class="col-12"><img class="" src="./images/Pickup%20or%20shipping.svg"></div>
             </div>
             <div class="row">
-                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">PICKUP OR SHIPPING</h6></div>
+                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.P_SHIPPING}}</h6></div>
             </div>
         </div>
         <div class="col-md">
@@ -57,7 +57,7 @@
                 <div class="col-12"><img class="" src="./images/Return.svg"></div>
             </div>
             <div class="row">
-                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">RETURN</h6></div>
+                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.RETURN}}</h6></div>
             </div>
 
         </div>
@@ -66,7 +66,7 @@
                 <div class="col-12"><img class="" src="./images/Modification%20and%20Cancellation.svg"></div>
             </div>
             <div class="row">
-                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">MODIFICATION AND CANCELLATION</h6></div>
+                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.MOD_CAN}}</h6></div>
             </div>
         </div>
     </div>
