--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -3,7 +3,7 @@
     <div class="row position-absolute logo1">
 <!--        <div class="col-12">-->
 <!--            <div class="row">-->
-                <h1>OUR WIFI PLANS</h1>
+                <h1>{{translation.OWP}}</h1>
 <!--            </div>-->
 <!--        </div>-->
 
@@ -55,7 +55,7 @@
     <div class="row">
         <div class="col d-flex justify-content-center coluna">
             <div class="pacote text-center">
-                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
                     <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
@@ -63,13 +63,13 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary site-cor">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
         <div class="col d-flex justify-content-center coluna">
             <div class="pacote text-center">
-                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
                     <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
@@ -77,13 +77,13 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary site-cor">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
         <div class="col d-flex justify-content-center coluna">
             <div class="pacote text-center">
-                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
                     <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
@@ -91,7 +91,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary site-cor">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
