--- a/views/home/servicos.handlebars
+++ b/views/home/servicos.handlebars
@@ -49,8 +49,9 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="hiw">Book Online</h3>
+                    <h3 class="hiw">{{translation.RESERVA_ONLINE}}</h3>
                 </div>
+
             </div>
         </div>
 
@@ -64,8 +65,8 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="hiw">Receive your<br>
-                        package</h3>
+                    <h3 class="hiw">{{translation.RYP}}<br>
+                        </h3>
                 </div>
             </div>
         </div>
@@ -80,8 +81,8 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="hiw">Enjoy internet<br>
-                        anywhere</h3>
+                    <h3 class="hiw">{{translation.EIA}}<br>
+                        </h3>
                 </div>
             </div>
         </div>
@@ -96,8 +97,8 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="hiw">Return the<br>
-                        Wifi device</h3>
+                    <h3 class="hiw">{{translation.RWD}}<br>
+                        </h3>
                 </div>
             </div>
         </div>
@@ -107,7 +108,7 @@
 <section id="AboutDevices" class="container-fluid">
     <div class="row mar-bo">
         <div class="col-md-12 text-center">
-            <h1 class="display-4 font-weight-bold">About The Devices</h1>
+            <h1 class="display-4 font-weight-bold">{{translation.ATD}}</h1>
         </div>
     </div>
 
