--- a/public/css/style.css
+++ b/public/css/style.css
@@ -289,6 +289,10 @@
     bottom: 2%;
 }
 
-/**************************************************************
+/**************************************************************/
 
+#error h1{
+    font-family: "Segoe UI Black";
+    font-size: 20em;
 
+}
