--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -1,8 +1,8 @@
-<section class="container-fluid">
+<section class="container-fluid mt-5 bg-info p-5" id="error">
     <div class="row">
-        <div class="col-md-12">
-            <h1>404</h1>
-            <p>Pagina nao encontrada</p>
+        <div class="col-md-12 text-center ">
+            <h1 class="font-weight-bold">404</h1>
+            <p>{{translation.error}}</p>
         </div>
     </div>
 </section>
