--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,5 +1,5 @@
 <footer class="container-fluid text-center">
-    <div class="row">
+    <div class="row ab">
         <div class="col-md logofooter">
             {{!-- <h1>LOGO</h1> --}}
             <a href="/">
@@ -9,7 +9,7 @@
         <div class="col-md-3 menufooter">
             <div class="row">
                 <div class="col-md-2 fmenu">MENU</div>
-                <div class="col-md-10">
+                <div class="col-md-10 mm">
                     <ul>
                         <li><a href="./servicos">{{translation.SERVICOS}}</a></li>
                         <li><a href="./planos">{{translation.PLANOS}}</a></li>
@@ -23,7 +23,7 @@
         <div class="col-md-4">
             <div class="row">
                 <div class="col-md-2 fcontato">{{translation.CONTATOS}} </div>
-                <div class="col-md-10">
+                <div class="col-md-10 cc">
                     <ul>
                         <li><a href="tel:002380000000">(+238) 000 00 00</a></li>
                         <li><a href="mailto:contact@wifianywhere.com">contact@wifianywhere.com</a></li>
