--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -13,7 +13,7 @@
 
 <section id="beneficio"  class="container-fluid">
     <div class="row">
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img src="./images/Beneficios 1.svg"></div>
             </div>
@@ -21,7 +21,7 @@
                 <div class="col-12 mt-4"><h5 class="text-center" >BENEFICIOS DO SERVIÇO</h5></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img src="./images/Beneficios 2.svg"></div>
             </div>
@@ -29,7 +29,7 @@
                 <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img src="./images/Beneficios 3.svg"></div>
             </div>
@@ -38,7 +38,7 @@
             </div>
 
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img src="./images/Beneficios 4.svg"></div>
             </div>
