--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md">
+        <div class="col-md-3">
                 <div class="row text-center mt-4">
                   <div class="col-12"><img src="./images/Beneficios 1.svg"></div>
                 </div>
@@ -30,7 +30,7 @@
                    <div class="col-12 mt-4"><h5 class="text-center" >BENEFICIOS DO SERVIÇO</h5></div>
                 </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
                 <div class="row text-center mt-4">
                     <div class="col-12"><img src="./images/Beneficios 2.svg"></div>
                 </div>
@@ -38,7 +38,7 @@
                     <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
                 </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
                 <div class="row text-center mt-4">
                     <div class="col-12"><img src="./images/Beneficios 3.svg"></div>
                 </div>
@@ -46,7 +46,7 @@
                     <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
                 </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
                 <div class="row text-center mt-4">
                     <div class="col-12"><img src="./images/Beneficios 4.svg"></div>
                 </div>
