add RWD to Login modal

--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -15,7 +15,7 @@
 
 <section id="categoria"  class="container-fluid">
     <div class="row">
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a class="general" href="faq">
@@ -28,7 +28,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold ativo" >{{translation.GENERAL}}</h6></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Usage.svg"></div>
             </div>
@@ -36,7 +36,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.USAGE}}</h6></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Booking%20and%20Payment.svg"></div>
             </div>
@@ -44,7 +44,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.B_PAYMENT}}</h6></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Pickup%20or%20shipping.svg"></div>
             </div>
@@ -52,7 +52,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.P_SHIPPING}}</h6></div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Return.svg"></div>
             </div>
@@ -61,7 +61,7 @@
             </div>
 
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Modification%20and%20Cancellation.svg"></div>
             </div>
