--- a/public/css/media.css
+++ b/public/css/media.css
@@ -110,6 +110,28 @@ footer .ab {
     max-width: 50%;
 }
 
+/*********FAQ*****************/
+.logofaq {
+    top: 8%;
+    left: 25%;
+}
+
+#faq input[type=text] {
+    top: 23%;
+    left: 12%;
+}
+
+#categoria .col-md-3 {
+    -ms-flex: 0 0 25%;
+    flex: 0 0 50%;
+    max-width: 100%;
+}
+
+/*****Entrar*********/
+.modal-dialog {
+    margin: 15.75rem auto;
+}
+
 
 }
 
