--- a/public/css/style.css
+++ b/public/css/style.css
@@ -285,6 +285,117 @@
     bottom: 2%;
 }
 
-/**************************************************************
+/****************************Login/signup**********************************/
+#redesocial{
+    /*display: inline-flex;*/
+    padding-top: 5%;
+}
+
+#nav-tabContent{
+    color: #1FB0C1;
+}
+
+/* Bordered form */
+/*form {
+    border: 3px solid #f1f1f1;
+}*/
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+/* Add a hover effect for buttons */
+button:hover {
+    opacity: 0.8;
+}
+
+/* Extra style for the cancel button (red) */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Add padding to containers */
+/*.container {
+    padding: 16px;
+}*/
+
+/* The "Forgot password" text */
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
+
+}
+
+.bg-info{
+    margin-top: -16px;
+}
+
+#login .nav-tabs .nav-link {
+    text-align: center;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+#menumodal {
+    /* position: relative; */
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    /*border: 1px solid rgba(0, 0, 0, 0.2);*/
+    /*border-radius: 0.3rem;*/
+    outline: 0;
+}
+/*******************linha separador modal login**********************/
+#separador{
+    color: #cccccc;
+    width:100%;
+    text-align:center;
+    border-bottom: 1px solid #000;
+    line-height:0.1em;
+    margin:10px 0 20px;
+}
+
+#separador span{
+    background:#fff;
+    padding:0 10px;
+    font-size: 0.7em;
+}
 
 
