--- a/public/css/main.css
+++ b/public/css/main.css
@@ -182,7 +182,7 @@ footer .mrg {
     /* deslizado*/
     /*top: 80%;*/
     /* escondido*/
-    top: 0;
+    top: 3%;
     left: 6%;
     z-index: 1;
     text-align: center;
@@ -205,7 +205,7 @@ footer .mrg {
 }
 #AboutDevices .device {
     position: relative;
-    width: 20%;
+    width: 80%;
 }
 #AboutDevices .devicebox ul {
     list-style-type: none;
